--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie": "^0.3.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "firebase": "^5.5.2",
     "localStorage": "^1.0.3",
     "nonce": "^1.0.4",
     "request": "^2.88.0",
