--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A test url shortener project to learn more about nodejs",
   "main": "app.js",
   "scripts": {
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
